--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
             <div class="container">
                 <a class="navbar-brand" href="index.html">Frontend Bootcamp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,6 +38,26 @@
                 </div>
             </div>
         </nav>
+        <!-- Showcase -->
+        <section class="bg-dark text-light p-5 text-center text-sm-start">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-2 d-flex align-items-center justify-content-between">
+                    <div class="col">
+                        <h1>Become a <span class="text-warning">Web Developer</span></h1>
+                        <p class="my-4">
+                            We focus on teaching our students the fundamentals of the latest
+                            and greatest technologies to prepare them for their first dev role
+                        </p>
+                        <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">
+                            Start The Enrollment
+                        </button>
+                    </div>
+                    <div class="col d-none d-sm-block">
+                        <img src="images/showcase.svg" class="img-fluid " alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
