--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <!-- Showcase -->
-        <section class="bg-dark text-light p-5 text-center text-sm-start">
+        <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-2 d-flex align-items-center justify-content-between">
                     <div class="col">
@@ -52,13 +52,28 @@
                             Start The Enrollment
                         </button>
                     </div>
-                    <div class="col d-none d-sm-block">
+                    <div class="col d-none d-md-block">
                         <img src="images/showcase.svg" class="img-fluid " alt="">
                     </div>
                 </div>
             </div>
         </section>
     </header>
+
+    <main>
+        <!-- Newsletter -->
+        <section class="bg-primary text-light p-md-5 p-3">
+            <div class="container">
+                <div class="d-sm-flex justify-content-between align-items-center">
+                    <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+                    <div class="input-group news-input">
+                        <input type="email" class="form-control" placeholder="Enter Email">
+                        <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Button</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
